manifests/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  ingressClassName: nginx
  rules:
  - host: echo-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green-app-service
            port:
              number: 8081
